tests/snapshots/integration__spec_test__spec_cmd_option_names_exec_eval.snap
---
source: tests/spec_test.rs
assertion_line: 81
expression: output
---
RUN
spec cmd_option_names --opt2 value2 --opt3 value3_0,value3_1 --opt4 value4_0 --opt4 value4_1 --opt6 a --opt8 a

STDOUT
argc_opt2=value2
argc_opt3=( value3_0 value3_1 )
argc_opt4=( value4_0 value4_1 )
argc_opt5=a
argc_opt6=a
argc_opt7=a
argc_opt8=a
cmd_option_names

STDERR


