tests/snapshots/integration__spec_test__spec_cmd_option_names_help.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_option_names -h

STDOUT


STDERR
Options all kind of names

USAGE: spec cmd_option_names [OPTIONS] --opt2 <OPT2> --opt4 <OPT4>... --opt8 <OPT8> --op11 <OP11>

OPTIONS:
      --opt1 <OPT1>       optional
      --opt2 <OPT2>       required
      --opt3 [<OPT3>...]  optional, multiple
      --opt4 <OPT4>...    required, multiple
      --opt5 <OPT5>       optional, default [default: a]
      --opt6 <OPT6>       choices [possible values: a, b, c]
      --opt7 <OPT7>       choices, default [default: a] [possible values: a, b, c]
      --opt8 <OPT8>       required, choices [possible values: a, b, c]
      --opt9 <OPT9>       optional, default from fn
      --op10 <OP10>       choices from fn
      --op11 <OP11>       required, choices from fn
  -h, --help              Print help


