tests/snapshots/integration__spec_test__spec_cmd_option_notations.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_option_notations --opt2

OUTPUT
cat >&2 <<-'EOF' 
error: invalid values for '--opt2 <DIR> <FILE>'

USAGE: spec cmd_option_notations [OPTIONS]

For more information, try '--help'.

EOF
exit 1

