tests/snapshots/integration__spec_test__spec_cmd_option_notations1.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_option_notations --opt2 foo

STDOUT


STDERR
error: 2 values required for '--opt2 <DIR> <FILE>' but 1 was provided

Usage: spec cmd_option_notations [OPTIONS]

For more information, try '--help'.


