tests/snapshots/integration__spec_test__spec_cmd_option_notations2.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_option_notations --opt2 foo bar

STDOUT
argc_opt2=( foo bar )
cmd_option_notations

STDERR


