tests/snapshots/integration__spec_test__spec_cmd_option_quotes_help.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_option_quotes -h

STDOUT


STDERR
Option value quoted

USAGE: spec cmd_option_quotes [OPTIONS]

OPTIONS:
      --opt1 <OPT1>  [default: a]
      --opt2 <OPT2>  [default: "a b"]
      --opt3 <OPT3>  [possible values: "a 3", b, c]
      --opt4 <OPT4>  [default: "a b"] [possible values: "a b", "c d", "e f"]
      --opt5 <OPT5>  [default: a|b] [possible values: a|b, c]d, ef]
  -h, --help         Print help


