tests/snapshots/integration__spec_test__spec_cmd_positional_only_help.snap
---
source: tests/spec_test.rs
assertion_line: 40
expression: output
---
RUN
spec cmd_positional_only -h

STDOUT


STDERR
spec-cmd_positional_only
Positional one required

USAGE: spec cmd_positional_only <ARG1>

ARGS:
  <ARG1>  A required arg

OPTIONS:
  -h, --help  Print help information


