tests/snapshots/integration__spec_test__spec_cmd_positional_option_as_positional.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_positional xyz -a --abc

OUTPUT
argc_name=xyz
argc_values=( -a --abc )
argc__args=( xyz -a --abc )
argc__fn=cmd_positional
cmd_positional xyz -a --abc

