tests/snapshots/integration__spec_test__spec_cmd_positional_requires_help.snap
---
source: tests/spec_test.rs
assertion_line: 52
expression: output

---
RUN
spec cmd-positional-requires -h

STDOUT


STDERR
spec-cmd-positional-requires 
Poistional All required

USAGE:
    spec cmd-positional-requires <ARG-1> <ARG-2>...

ARGS:
    <ARG-1>       A required arg
    <ARG-2>...    A required arg, multiple

OPTIONS:
    -h, --help    Print help information


