tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices.snap
---
source: tests/spec_test.rs
assertion_line: 114
expression: output
---
RUN
spec cmd_positional_with_choices -h

STDOUT


STDERR
Positional with choices

USAGE: spec cmd_positional_with_choices [ARG]

ARGS:
  [ARG]  A arg with choices [possible values: a, b]

OPTIONS:
  -h, --help  Print help information


