tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_and_default.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_positional_with_choices_and_default -h

OUTPUT
cat >&2 <<-'EOF' 
Positional with choices and value

USAGE: spec cmd_positional_with_choices_and_default [ARG]

ARGS:
  [ARG]  A arg with choices and default value [default: a] [possible values: a, b]

EOF
exit 0

